# termpdf.rs

./: .gitignore  Cargo.toml  PLAN.md  README.md
termpdf-cli/: Cargo.toml
termpdf-cli/src/: main.rs
termpdf-core/: Cargo.toml
termpdf-core/src/: lib.rs
termpdf-render/: Cargo.toml  build.rs
termpdf-render/src/: lib.rs
termpdf-tty/: Cargo.toml
termpdf-tty/src/: lib.rs
