[workspace]
members = [
    "termpdf-core",
    "termpdf-render",
    "termpdf-tty",
    "termpdf-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Yehor Korotenko"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8"
toml = "0.8"
directories = "5.0"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.19"
rayon = "1.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
png = "0.17"
base64 = "0.22"
bytes = "1.6"
crossterm = "0.27"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"
notify = "6.1"
rand = "0.8"
tempfile = "3.10"
assert_cmd = "2.0"
expectrl = "0.7"
insta = { version = "1.39", features = ["redactions"] }
serde_bytes = "0.11"
uuid = { version = "1.6", features = ["v4", "v5"] }
pdfium-render = { version = "0.8.35" }
