[package]
name = "termpdf-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
directories = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossterm = { workspace = true }
termpdf-core = { path = "../termpdf-core" }
termpdf-render = { path = "../termpdf-render" }
termpdf-tty = { path = "../termpdf-tty" }
