[package]
name = "termpdf-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
