[package]
name = "termpdf-render"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["pdf"]
pdf = ["dep:pdfium-render"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
termpdf-core = { path = "../termpdf-core" }
pdfium-render = { version = "0.8", optional = true, features = ["sync"] }
uuid = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
tar = "0.4"
ureq = { version = "2.9", features = ["tls", "json"] }
walkdir = "2.5"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
